feat: add filters to user list endpoint and update swagger docs
